--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"node api/index.js"
+    "dev":"node api/index.js",
+    "start": "node api/index.js"
+
   },
   "keywords": [],
   "author": "",
