--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"node api/index.js",
-    "start": "node api/index.js"
+    "dev":"node index.js",
+    "start": "node index.js"
 
   },
   "keywords": [],
