--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev":"node index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "cd client && npm install && npm run build"
+
 
   },
   "keywords": [],
