--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"node index.js",
-    "start": "node index.js",
-    "postinstall": "cd client && npm install && npm run build"
+    "dev":"nodemon index.js",
+    "build":"npm install && npm install --prefix client && npm run build --prefix client",
+    "start": "nodemon index.js"
 
 
   },
